# plaud-profiler

./: .gitignore  README.md  pyproject.toml
specs/: openapi.yaml
src/plaud_profiler/: __init__.py  analyzer.py  cli.py  models.py  plaud_client.py  profiles.py  reporter.py
src/plaud_profiler/analyzers/: __init__.py  base.py  claude_analyzer.py  nlp_analyzer.py  ollama_analyzer.py
